--- CHANGES SINCE UASNIFFER 1.4 (under development) --------------------------

* Added unit tests for:
  - Chrome 28 on OS X 10.8.2.
  - RockMelt 0.16 on OS X 10.8.2.
  - Maxthon 4.0.4 on OS X 10.8.2.


--- CHANGES SINCE UASNIFFER 1.3 (April 16, 2013) -----------------------------

* Now recognizing IE 11 on Windows Blue (based on leaked preliminary agent string).
* Fixed issue detecting Opera Mini 9.80.
* Refactored Opera detection code.
* Removed dead code from Sniffer class.
* Unit testing Sniffer constructor now (must be private).
* Added unit tests for the following user agents:
  - Internet Explorer 11 on Windows Blue (preliminary, leaked).
  - Internet Explorer 10 on Windows 8 64-bit.
  - WPF application on Windows 8.
  - Firefox 16 on OS X 10.8.x.
  - Firefox 19 on OS X 10.8.x.
  - Fennec 9.0 (Firefox Mobile) on Android.
  - Opera 12.10 (prerelease) on OS X 10.8.1.
  - Opera 8.0 masquerading as MSIE 6.0.
  - Opera 8.5 masquerading as MSIE 6.0.
  - Opera 9.2 on Windows Vista.
  - Opera Mini 7.0 on Android.
  - Opera Mini 7.1 on iPad.
  - Opera Mini 9.80.
  - Netscape 8.1 on Windows XP.
  - Opera 7.02 on Windows XP masquerading as MSIE 5.5/6.0.
  - Rockmelt 0.9.72 on OS X 10.8.2.
  - RockMelt 2.1 browser on iPhone running iOS 6.0.1.
  - RockMelt 0.16 on OS X 10.8.1.
  - RockMelt 0.16 on Windows 7.
  - RockMelt 0.16 on Windows 8.
  - Konqueror 4.8 on Windows.
  - Konqueror 4.8 on Fedora 17.
  - Konqueror 4.9 on Linux.
  - Web browser inside Eclipse on OS X 10.8.1.
  - Sleipnir 3.8.4.1 on OS X 10.8.2.
  - Sleipnir 4.1 on OS X 10.8.2.
  - Opera 12.13 on OS X 10.8.2.


--- CHANGES SINCE UASNIFFER 1.2 (September 3, 2012) --------------------------

* Introduced 'BrowserEngine-Trident-MSIE' (with versions) to make it possible
  to detect browsers that render with the same engine as MSIE version X. 
* Now detecting Sleipnir browser. This changes the behaviour: Sleipnir on
  Windows is no longer detected as MSIE.
* Added unit test for Sleipnir 2.8.1 on Windows XP.